Commit all files I currently have